@@ -12,13 +12,15 @@ public:
 	CSkinInfo();
 	~CSkinInfo();
 	
-	void Load(CStdString& strSkinDir);// load the skin.xml file if it exists, and configure our directories etc.
-	bool Check(CStdString& strSkinDir);	// checks if everything is present and accounted for without loading the skin
+	void Load(const CStdString& strSkinDir);// load the skin.xml file if it exists, and configure our directories etc.
+	bool Check(const CStdString& strSkinDir);	// checks if everything is present and accounted for without loading the skin
 
 	CStdString GetSkinPath(const CStdString& strFile, RESOLUTION *res);		// retrieve the best skin file for the resolution we are in - res will be made the resolution we are loading from
 	wchar_t* GetCreditsLine(int i);
 
 	CStdString GetDirFromRes(RESOLUTION res);
+
+	double GetMinVersion();
 
 protected:
 
